[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "boilercine"
version = "0.0.0"
description = "Convert CINEs for a boiling study."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "License :: OSI Approved :: MIT License",]
dependencies = [ "click", "colorama", "docopt", "numpy", "timecode",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+boilercine@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Changes = "https://blakeNaccarato.github.io/boilercine/changelog.html"
Docs = "https://blakeNaccarato.github.io/boilercine"
Home = "https://github.com/blakeNaccarato/boilercine"
Tracker = "https://github.com/blakeNaccarato/boilercine/issues"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PIE804", "PLR0913", "PLR2004", "PLW2901", "RET", "S301", "TCH", "TD", "TRY003", "W2", "B018", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"docs/**" = [ "E402",]
"tests/**" = [ "N815", "ARG001", "S101",]
"src/boilercine/models.py" = [ "N815",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
